# pgsql_train

./: .env.example  .gitignore  MIGRATION_NOTES.md  PAPER_PROCESSING_README.md  PROJECT_STRUCTURE.md  README-RAG.md  README.md  README_REFACTORED.md  docker-compose.yml  list_papers.py  list_papers_new.py  main.py  main_enhanced.py  main_new.py  package-lock.json  process_with_uv.sh  pyproject.toml
.github/: copilot-instructions.md
database/: __init__.py  create_tables.py  dbmanager.py
docs/: zanella_2025-with-images.md
experimental/: ENHANCED_TEXT_EXTRACTION_README.md  TEXT_EXTRACTION_README.md  comprehensive_metadata_schema_proposal.md  demo_sections.json  enhanced_demo.py  enhanced_demo_output.json  enhanced_paper_models.py  enhanced_schema.sql  extracted_images.json  extracted_references.json  extracted_tables.json  extracted_text_sections.json  image_extraction.py  images_extraction.py  paper_agent.py  references_extraction.py  table_extraction.py  text_agent.py  text_extraction_demo.py
frontend/: README.md  package-lock.json  package.json
frontend/api/: main.py  requirements.txt
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js
instructions/: adk-mcp.md
multi_agents/: README.md  __init__.py  main.py
multi_agents/database_agent/: agent.py
multi_agents/greeting_agent/: agent.py
multi_agents/orchestrator_agent/: agent.py
src/: paper_processor.py
src/config/: __init__.py  ai_models.py
src/database/: __init__.py  connection.py  repositories.py  schema_manager.py
src/models/: __init__.py  (+5 more)
tutorial/: how to setup.md
(+10 files in other folders)
