[project]
name = "pgsql-train"
version = "0.1.0"
description = "PostgreSQL training project with Docker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "google-adk>=1.3.0",
    "google-genai>=1.19.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
]
